# My_AI_Journey

./: .gitignore  README.md  main.py  pyproject.toml
Tasks/02/: ML_Session1_Exercises.ipynb
Tasks/03/: Assignment3.ipynb
